<resources>
    <string name="app_name">NumberPicker</string>

    <string name="_0" translatable="false">00</string>
    <string name="_0_" translatable="false">:00:</string>

    <string name="get_time">Get time</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Apply</string>

    <string name="h">h</string>
    <string name="m">m</string>
    <string name="s">s</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="day">day</string>
    <string name="month">month</string>
</resources>