<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bnGetTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/line1"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/tvValue1"
                style="@style/text1"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/tvValue2"
                style="@style/text1"
                android:layout_marginStart="18dp"
                android:gravity="center"
                android:text="@string/_0" />

            <Space
                android:layout_width="38dp"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/tvValue3"
                style="@style/text1"
                android:layout_marginEnd="18dp"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/tvValue4"
                style="@style/text1"
                android:layout_marginEnd="0dp"
                android:text="@string/_0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <com.tera.custom_numberpicker.NumberPickerCustom
                android:id="@+id/picker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.tera.custom_numberpicker.NumberPickerCustom
                android:id="@+id/picker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:np_textHint="@string/min" />

            <com.tera.custom_numberpicker.NumberPickerCustom
                android:id="@+id/picker3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:np_dividerColor="@color/red_700"
                app:np_showRows5="true"
                app:np_textColorSelected="@color/red_700"
                app:np_textSizeNormal="@dimen/text_normal"
                app:np_textSizeSelected="@dimen/text_select" />

            <com.tera.custom_numberpicker.NumberPickerCustom
                android:id="@+id/picker4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:np_dividerColor="@color/red_700"
                app:np_showRows5="true"
                app:np_textColorSelected="@color/red_700"
                app:np_textColorNormal="#D7D7D7"
                app:np_textHint="@string/sec"
                app:np_textSizeNormal="@dimen/text_normal"
                app:np_textSizeSelected="@dimen/text_select" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTime"
            style="@style/line1"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/tvHour"
                style="@style/text1.t"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/tvMin"
                style="@style/text1.t"
                android:text="@string/_0_" />

            <TextView
                android:id="@+id/tvSec"
                style="@style/text1.t"
                android:text="@string/_0" />

        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bnGetTime"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/get_time"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ButtonStyle" />


</androidx.constraintlayout.widget.ConstraintLayout>